Fix translations and UI improvements: remove hardcoded text, fix CORS headers, remove tutorial button and footer sections

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -148,7 +148,23 @@
     "property_views_chart": "Property Views Over Time",
     "recent_activity": "Recent Activity",
     "no_view_data": "No view data available",
-    "no_recent_activity": "No recent activity"
+    "no_recent_activity": "No recent activity",
+    "property_dashboard": "Property Dashboard",
+    "manage_track": "Manage your properties and track performance",
+    "properties_listed": "Properties listed",
+    "across_all": "Across all properties",
+    "total_likes": "Total Likes",
+    "likes_received": "Property likes received",
+    "awaiting_confirmation": "Awaiting confirmation",
+    "best_performing": "Best Performing Property",
+    "views": "views",
+    "likes": "likes",
+    "my_properties": "My Properties",
+    "manage_edit": "Manage and edit your property listings",
+    "view_appointments": "View Appointments",
+    "no_properties_yet": "No properties yet",
+    "start_adding": "Start by adding your first property",
+    "add_first_property": "Add Your First Property"
   },
   "auth": {
     "welcome_back": "Welcome back",
