--- a/frontend/public/locales/fr/translation.json
+++ b/frontend/public/locales/fr/translation.json
@@ -150,7 +150,23 @@
     "property_views_chart": "Vues des propriétés au fil du temps",
     "recent_activity": "Activité récente",
     "no_view_data": "Aucune donnée de vue disponible",
-    "no_recent_activity": "Aucune activité récente"
+    "no_recent_activity": "Aucune activité récente",
+    "property_dashboard": "Tableau de bord des propriétés",
+    "manage_track": "Gérez vos propriétés et suivez les performances",
+    "properties_listed": "Propriétés listées",
+    "across_all": "Sur toutes les propriétés",
+    "total_likes": "Total des likes",
+    "likes_received": "Likes de propriétés reçus",
+    "awaiting_confirmation": "En attente de confirmation",
+    "best_performing": "Propriété la plus performante",
+    "views": "vues",
+    "likes": "likes",
+    "my_properties": "Mes propriétés",
+    "manage_edit": "Gérez et modifiez vos annonces de propriétés",
+    "view_appointments": "Voir les rendez-vous",
+    "no_properties_yet": "Aucune propriété pour le moment",
+    "start_adding": "Commencez par ajouter votre première propriété",
+    "add_first_property": "Ajouter votre première propriété"
   },
   "auth": {
     "welcome_back": "Bon retour",
