--- a/frontend/public/locales/ar/translation.json
+++ b/frontend/public/locales/ar/translation.json
@@ -7,6 +7,61 @@
     "login": "تسجيل الدخول",
     "signup": "اشتراك"
   },
+  "properties": {
+    "title": "العقارات",
+    "search_placeholder": "البحث عن عقارات...",
+    "filter_by_price": "تصفية حسب السعر",
+    "filter_by_type": "نوع العقار",
+    "filter_by_location": "الموقع",
+    "min_price": "السعر الأدنى",
+    "max_price": "السعر الأعلى",
+    "bedrooms": "غرف النوم",
+    "bathrooms": "الحمامات",
+    "sqft": "المساحة (م²)",
+    "amenities": "المرافق",
+    "apply_filters": "تطبيق الفلاتر",
+    "clear_filters": "مسح الفلاتر",
+    "no_properties_found": "لم يتم العثور على عقارات",
+    "loading": "جاري التحميل...",
+    "view_details": "عرض التفاصيل",
+    "schedule_viewing": "جدولة زيارة",
+    "add_to_favorites": "إضافة إلى المفضلة",
+    "remove_from_favorites": "إزالة من المفضلة",
+    "availability": "التوفر",
+    "fetch_error": "فشل في جلب العقارات. يرجى المحاولة لاحقاً.",
+    "loading_message": "نحن نجد المنازل المثالية التي تتوافق مع تفضيلاتك...",
+    "please_wait": "يرجى الانتظار بينما نختار العقارات لك",
+    "find_perfect_property": "اعثر على عقارك المثالي",
+    "discover_collection": "اكتشف مجموعة منتقاة من العقارات المتميزة",
+    "sort_by": "ترتيب حسب",
+    "price_low_high": "السعر: من الأقل إلى الأعلى",
+    "price_high_low": "السعر: من الأعلى إلى الأقل",
+    "newest_first": "الأحدث أولاً",
+    "toggle_filters": "تبديل الفلاتر",
+    "adjust_filters": "حاول تعديل الفلاتر أو معايير البحث",
+    "recent_searches": "عمليات البحث الأخيرة",
+    "current_page": "الصفحة الحالية",
+    "pages": "صفحات"
+  },
+  "common": {
+    "search": "بحث",
+    "filter": "تصفية",
+    "sort": "ترتيب",
+    "save": "حفظ",
+    "cancel": "إلغاء",
+    "submit": "إرسال",
+    "loading": "جاري التحميل...",
+    "error": "خطأ",
+    "success": "نجاح",
+    "close": "إغلاق",
+    "back": "رجوع",
+    "next": "التالي",
+    "previous": "السابق",
+    "dashboard": "لوحة التحكم",
+    "retry": "إعادة المحاولة",
+    "learn_more": "اعرف المزيد",
+    "confirm": "تأكيد"
+  },
   "hero": {
     "title_part1": "ابحث عن الكمال الخاص بك",
     "title_part2": "مساحة المعيشة",
@@ -56,7 +111,7 @@
     "title": "رحلتنا حتى الآن",
     "subtitle": "المحطات التي تميز نمونا ونجاحنا",
     "properties_listed_title": "العقارات المدرجة",
-    "properties_listed_description": "وتنمو يوميا",
+    "properties_listed_description": "وتنمو يومياً",
     "happy_clients_title": "عملاء سعداء",
     "happy_clients_description": "عملاء راضون"
   },
