--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -96,7 +96,9 @@
     "newest_first": "Newest First",
     "toggle_filters": "Toggle Filters",
     "adjust_filters": "Try adjusting your filters or search criteria",
-    "recent_searches": "Recent Searches"
+    "recent_searches": "Recent Searches",
+    "current_page": "Current page",
+    "pages": "pages"
   },
   "filters": {
     "house": "House",
